# gw2radar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GW2RADAR_API_ACCESS_GOVERNANCE.md  GW2RADAR_PROJECT_CONSTITUTION.md  PROJECT_INDEX.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: __init__.py
docs/: HARNESS.md  LOOPS.md  PRD.md  PROMPTS.md  SDD.md  TRUST_SEMANTICS.md  WORKSPACE_HYGIENE.md
harness/: __init__.py  aegisradar_borrowing_assessment.py  closure_readiness.py  expected_export_website_manifest.json  expected_technical_proposal_manifest.json  final_closeout_dashboard.py  operational_hardening_readiness.py  operator_release_packet.py  post_mvp_roadmap.py  run_account_connection_diagnostic.py  run_account_debug_bundle_review.py  run_achievement_route_smoke.py  run_aegisradar_borrowing_assessment.py  run_closure_readiness.py  run_delivery_maturity_audit.py  run_final_closeout_dashboard.py  run_operational_hardening_readiness.py  run_operator_release_packet.py  run_player_ui_e2e_smoke.py  run_player_use_path_audit.py  run_post_mvp_roadmap.py  run_smoke.py  run_spec_reconciliation.py  run_spec_registry.py  run_stage_gate.py  run_support_review_ui_smoke.py  run_sync_smoke.py  run_trial_defect_triage.py  run_validation_profile.py  sample_export_website_intake.json  sample_technical_proposal_intake.json  spec_reconciliation.py  spec_registry.py  trial_defect_triage.py  validation_profiles.py
tests/: README.md  build_fit_helpers.py  creator_test_helpers.py  guild_test_helpers.py  kb_test_helpers.py  legendary_test_helpers.py  test_bors.py  (+208 more)
(+517 files in other folders)
