[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gw2radar"
version = "0.1.0"
description = "GW2Radar MVP 0.1 Legendary Goal Intelligence Edition"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "pydantic>=2",
    "sqlalchemy>=2",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
